--- a/index.html
+++ b/index.html
@@ -1,109 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>JG TRAINING - Entrenamiento Híbrido</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-      line-height: 1.6;
-    }
-    header {
-      background-color: #000;
-      padding: 20px;
-      text-align: center;
-    }
-    .logo {
-      max-width: 150px;
-    }
-    .hero {
-      text-align: center;
-      padding: 60px 20px;
-      background: url(https://drive.google.com/file/d/15PErejLOTq9rmgw19jCPygywMRglLN6q/view?usp=sharing) no-repeat center center/cover;
-    }
-    .hero h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
-    }
-    .cta-button {
-      background-color: #e10600;
-      color: #fff;
-      padding: 15px 30px;
-      font-size: 1.2rem;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background 0.3s ease;
-    }
-    .cta-button:hover {
-      background-color: #c00400;
-    }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 40px 20px;
-      background-color: #111;
-    }
-    .feature {
-      margin: 20px;
-      max-width: 300px;
-      text-align: center;
-    }
-    .feature h2 {
-      color: #e10600;
-      margin-bottom: 10px;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #000;
-      font-size: 0.9rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Entrenamiento Online - Planes Personalizados</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f8f8f8; }
+        header { background-color: #111; color: #fff; text-align: center; padding: 20px; }
+        section { max-width: 900px; margin: 20px auto; padding: 20px; background: #fff; border-radius: 10px; }
+        .button { background-color: #e60000; color: #fff; padding: 10px 20px; text-decoration: none; display: inline-block; border-radius: 5px; }
+        .plan { border: 1px solid #ddd; padding: 15px; margin: 10px 0; border-radius: 8px; }
+    </style>
 </head>
 <body>
-  <!-- Encabezado -->
-  <header>
+    <header>
+        <h1>Entrenamiento Online Personalizado</h1>
+        <p>Planes adaptados a tus objetivos y necesidades</p>
+    </header>
 
-    <img src="lhttps://drive.google.com/file/d/1Z5T1DTus4ddbgAGYPrNLDnZfGbih4ZrD/view?usp=sharing" alt="Logo JG TRAINING" class="logo">
-  </header>
+    <section>
+        <h2>¿Qué ofrecemos?</h2>
+        <p>Planes de entrenamiento diseñados según tu nivel, objetivos y equipamiento disponible.</p>
+        <a href="#planes" class="button">Ver Planes</a>
+    </section>
 
-  <!-- Sección Hero -->
-  <section class="hero">
-    <h1>JG TRAINING</h1>
-    <p>Programas de Entrenamiento | Fuerza | Running</p>
-    <p>Estructura Profesional - Resultados Garantizados</p>
-    <!-- Actualiza el enlace con el de Hotmart u otro destino de compra -->
-    <a href="https://www.hotmart.com" class="cta-button">¡Compra Ahora!</a>
-  </section>
+    <section id="planes">
+        <h2>Planes Disponibles</h2>
+        <div class="plan">
+            <h3>Plan Básico</h3>
+            <p>Ideal para principiantes o quienes buscan una guía estructurada.</p>
+            <a href="#contacto" class="button">Elegir Plan</a>
+        </div>
+        <div class="plan">
+            <h3>Plan Intermedio</h3>
+            <p>Entrenamiento con progresión personalizada y seguimiento mensual.</p>
+            <a href="#contacto" class="button">Elegir Plan</a>
+        </div>
+        <div class="plan">
+            <h3>Plan Premium</h3>
+            <p>Plan 100% personalizado con ajuste semanal y contacto directo con el entrenador.</p>
+            <a href="#contacto" class="button">Elegir Plan</a>
+        </div>
+    </section>
 
-  <!-- Sección de Características -->
-  <section class="features">
-    <div class="feature">
-      <h2>Programas de Entrenamiento</h2>
-      <p>Planes estructurados para transformar tu rendimiento y alcanzar tus metas.</p>
-    </div>
-    <div class="feature">
-      <h2>Ebook de Nutrición</h2>
-      <p>Guías nutricionales personalizadas para optimizar tu rendimiento.</p>
-    </div>
-    <div class="feature">
-      <h2>Ebook de Recuperación</h2>
-      <p>Técnicas de recuperación y prevención de lesiones para entrenar al máximo.</p>
-    </div>
-  </section>
-
-  <!-- Pie de Página -->
-  <footer>
-    <p>&copy; 2025 JG TRAINING. Todos los derechos reservados.</p>
-  </footer>
+    <section id="contacto">
+        <h2>Contáctanos</h2>
+        <p>Déjanos tus datos y nos comunicaremos contigo para elegir el mejor plan para ti.</p>
+        <form>
+            <label>Nombre:</label><br>
+            <input type="text" name="nombre" required><br>
+            <label>Email:</label><br>
+            <input type="email" name="email" required><br>
+            <label>Mensaje:</label><br>
+            <textarea name="mensaje" required></textarea><br>
+            <button type="submit" class="button">Enviar</button>
+        </form>
+    </section>
 </body>
 </html>
